fix: Fix alignment of the inside and beside text with media elements

--- a/src/styles/globals/_media-info.css
+++ b/src/styles/globals/_media-info.css
@@ -143,3 +143,13 @@
         --icon-color: var(--media-info-toggle-hover-color);
     }
 }
+
+@media screen and (min-width: 768px) {
+    .text-block[text-block-media-position*="inside"] .media-info {
+        --media-info-width: calc(100% - calc(var(--text-block-grid-gap) / 2));
+    }
+
+    .text-block[text-block-media-position="inside-right"] .media-info {
+        --media-info-left: calc(var(--text-block-grid-gap) / 2);
+    }
+}
